apps/geonganghaegym/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: http
